# nutrivet-ia

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  RUNBOOK.md  SHIPPING-CHECKLIST.md  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml  main.py  pyproject.toml
.claude/agents/: nutrition-validator.md  plan-validator.md  spec-consistency-checker.md  test-runner.md  toxicity-checker.md
.claude/commands/: aidlc-construction.md  aidlc.md  plan.md  specify.md  tasks.md
.claude/rules/: 00-constitution.md  01-inception.md  02-construction.md  03-operations.md
.github/workflows/: ci.yml
ai-dlc/: README.md
ai-dlc/workflows/: hitl-review.md  llm-routing.md  plan-generation.md
aidlc-docs/: aidlc-state.md  audit.md
backend/infrastructure/: logging_config.py
backend/presentation/: rate_limiter.py
behaviors/: README.md  conversational-agent.feature  hitl-workflow.feature  medical-restrictions.feature  ocr-scanner.feature  plan-generation.feature
behaviors/golden-cases/: sally.feature
decisions/: ADR-013-llm-routing.md  ADR-014-size-5-categories.md  ADR-015-cat-activity-indoor-outdoor.md  ADR-016-no-rejected-state.md  ADR-017-pdf-export.md  ADR-018-vet-as-plan-creator.md  ADR-019-openrouter-llm-routing.md  ADR-020-interactive-plan-presentation.md  ADR-021-fluid-conversational-agent.md  ADR-022-hetzner-coolify-infrastructure.md  ADR-023-rag-knowledge-base.md  README.md
docs/: DECISIONS.md  SDD.md  TASK1-SUMMARY.md  icp.md  mercado.md  overview.md  plan-mejoras-clinicas-v1.md  pvb.md  ux-design.md
docs/research/: nutricion-veterinaria-master.md  veterinary-nutrition-deep-research.md
docs/tool-specs/: README.md
domain/: bounded-contexts.md  domain-events.md  invariants.md  subscription-tiers.md  ubiquitous-language.md
domain/aggregates/: nutrition-plan.md  pet-profile.md  user-account.md
domain/compliance/: disclaimer-mandatory.txt
domain/golden-cases/: sally.md
mobile/: README.md  pubspec.yaml
mobile/lib/: main.dart
scripts/: create_admin.py  init_db.sh
specs/: README.md  backend.md  database.md  deployment.md  frontend.md  prd.md
tests/: conftest.py  quality-gates.md  strategy.md
(+439 files in other folders)
