[project]
name = "nutrivet-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt>=4.0,<5.0",
    "boto3>=1.42.72",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "langchain-core>=1.2.20",
    "langgraph>=1.1.3",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.12.5",
    "pypdf>=6.9.1",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "limits[redis]>=3.13.0",
    "slowapi>=0.1.9",
    "structlog>=25.1.0",
    "sqlalchemy[asyncio]>=2.0.48",
    "uvicorn[standard]>=0.42.0",
    "weasyprint>=68.1",
]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.6",
    "testcontainers[postgres]>=4.8.0",
]
